--- a/trunk/toolbox/build.xml
+++ b/trunk/toolbox/build.xml
@@ -77,17 +77,7 @@
 
         <!-- define common build classpath -->
         <path id="common.class.path">
-        
-            <!--fileset dir="${targets}">
-                <include name="**/*.jar"/>
-                <include name="**/*.zip"/>
-            </fileset-->
-
-            <!--fileset dir="${lib}">
-                <include name="*.jar"/>
-                <include name="*.zip"/>
-            </fileset-->
-
+            <!-- TODO: get rid of this -->
             <path refid="project.tools.path"/>
         </path>
 
@@ -182,23 +172,23 @@
     
         <property name="cp" refid="project.class.path"/>
 
-		<!-- Dump the classpath -->        
+        <!-- Dump the classpath -->        
         <script language="beanshell"> <![CDATA[
-	        print("CLASSPATH:");
-			sb = new StringBuffer();
-			cp = toolbox.getProperty("cp");
-			for (t = new StringTokenizer(cp, File.pathSeparator); t.hasMoreTokens(); )
-				sb.append(t.nextToken() + System.getProperty("line.separator"));
-			print(sb.toString());
+            print("CLASSPATH:");
+            sb = new StringBuffer();
+            cp = toolbox.getProperty("cp");
+            for (t = new StringTokenizer(cp, File.pathSeparator); t.hasMoreTokens(); )
+                sb.append(t.nextToken() + System.getProperty("line.separator"));
+            print(sb.toString());
         ]]></script>
         
         <javac 
-            srcdir = "${src}" 
-            destdir = "${classes}" 
-            debug = "${project.debug}" 
+            srcdir   = "${src}" 
+            destdir  = "${classes}" 
+            debug    = "${project.debug}" 
             optimize = "${optimize}" 
-            target = "${javavm}" 
-            fork = "yes"
+            target   = "${javavm}" 
+            fork     = "no"
             failonerror = "${project.failonerror}">
             
             <classpath refid="project.class.path"/>
@@ -378,7 +368,7 @@
 
     </target>
 
-
+    
     <!--=============================-->
     <!--           JAR-SRC           -->
     <!--=============================-->
@@ -496,8 +486,7 @@
                 
                     <!-- if junit.class is defined, run only tests that match the class name -->
                     <include name="**/*Test.java" unless="junit.class"/>                
-                    <!--include name="**/test/*${junit.class}Test.java"/-->
-                    <include name="${junit.class}"/> 
+                    <include name="**/test/*${junit.class}*.java"/> 
                     
                     <!-- exclude the GUI tests -->
                     <exclude name="**/ui/**/*Test.java" />
@@ -515,9 +504,9 @@
     <!--        JUNIT.REPORT         -->
     <!--=============================-->
     <target name="junit.report" 
-    		depends="init"
+            depends="init"
             description=
-            	"Launches report containing results of the JUnit test cases">
+                "Launches report containing results of the JUnit test cases">
 
         <junitreport todir="${junit.xml}">
             <fileset dir="${junit.xml}">
@@ -539,81 +528,81 @@
     <!--=============================-->
     <!--        WITH.CLOVER          -->
     <!--=============================-->
-	<taskdef resource="clovertasks"/>
+    <taskdef resource="clovertasks"/>
     <typedef resource="clovertypes"/>
 
-	<target name="with.clover" 
-			depends="init"
+    <target name="with.clover" 
+            depends="init"
             description="Turns on usage of clover">
             
         <mkdir dir="${clover}"/>
         
-	    <clover-setup initString="${clover}/coverage.db">
+        <clover-setup initString="${clover}/coverage.db">
             <files>
                 <exclude name="**/test/*.java"/>
             </files>             
-	    </clover-setup>
-	</target>
+        </clover-setup>
+    </target>
 
 
     <!--=============================-->
     <!--        CLOVER.SWING         -->
     <!--=============================-->
-	<target name="clover.swing" 
-			depends="with.clover" 
-			description="Launches Swing based GUI to view Clover coverage reports">
-	   <clover-view/>
-	</target>
+    <target name="clover.swing" 
+            depends="with.clover" 
+            description="Launches Swing based GUI to view Clover coverage reports">
+       <clover-view/>
+    </target>
 
 
     <!--=============================-->
     <!--        CLOVER.HTML          -->
     <!--=============================-->
-	<target name="clover.html" 
-			depends="with.clover"
-			description="Generates Clover coverage report in HTML format">
-			
-	   <clover-report>
-	      <current outfile="${clover}">
-	         <format type="html"/>
-	      </current>
-	   </clover-report>
-	   
+    <target name="clover.html" 
+            depends="with.clover"
+            description="Generates Clover coverage report in HTML format">
+            
+       <clover-report>
+          <current outfile="${clover}">
+             <format type="html"/>
+          </current>
+       </clover-report>
+       
         <exec executable="cmd.exe">
             <arg line="/c start ${clover}/index.html"/>
         </exec>            
-	   
-	</target>
-	
-	
+       
+    </target>
+    
+    
     <!--=============================-->
     <!--        CLOVER.XML           -->
     <!--=============================-->
-	<target name="clover.xml" 
-			depends="with.clover"
-			description="Generates Clover coverage data in XML">
-			
-	   <clover-report>
-	      <current outfile="${clover}/coverage.xml">
-	         <format type="xml"/>
-	      </current>
-	   </clover-report>
-	</target>
-	
-	
+    <target name="clover.xml" 
+            depends="with.clover"
+            description="Generates Clover coverage data in XML">
+            
+       <clover-report>
+          <current outfile="${clover}/coverage.xml">
+             <format type="xml"/>
+          </current>
+       </clover-report>
+    </target>
+    
+    
     <!--=============================-->
     <!--        CLOVER.PDF           -->
     <!--=============================-->
-	<target name="clover.pdf" 
-			depends="with.clover"
-			description="Generates Clover summary report to a PDF file">
-			
-	   <clover-report>
-	      <current summary="yes" outfile="${clover}/coverage.pdf">
-	         <format type="pdf"/>
-	      </current>
-	   </clover-report>
-	</target>
+    <target name="clover.pdf" 
+            depends="with.clover"
+            description="Generates Clover summary report to a PDF file">
+            
+       <clover-report>
+          <current summary="yes" outfile="${clover}/coverage.pdf">
+             <format type="pdf"/>
+          </current>
+       </clover-report>
+    </target>
 
 
     <!--=============================-->
@@ -657,16 +646,16 @@
             depends="init" 
             description="Generates a report of code convention violations.">    
 
-		<!-- directory for checkstyle generated docs -->
-		<property 
-			name="checkstyle" 
-			value="${doc}/checkstyle"/>
-		
+        <!-- directory for checkstyle generated docs -->
+        <property 
+            name="checkstyle" 
+            value="${doc}/checkstyle"/>
+        
         <mkdir dir="${checkstyle}"/>
         <delete dir="${checkstyle}/*.*"/> 
     
         <checkstyle 
-        	failOnViolation="false"    
+            failOnViolation="false"    
             properties="${build.conf}/checkstyle.properties">
             
             <fileset dir="${src}" includes="**/*.java"/>                        
@@ -674,8 +663,8 @@
             <!--formatter type="plain"/-->                                               
             
             <formatter 
-            	type="xml" 
-            	toFile="${checkstyle}/checkstyle_report.xml"/>       
+                type="xml" 
+                toFile="${checkstyle}/checkstyle_report.xml"/>       
             
         </checkstyle>
                      
@@ -703,21 +692,21 @@
             
         <input message="Enter CVS password:" addproperty="cvs.password"/>    
         
-		<property 
-			name="cvsroot" 
-			value=":pserver:analogue@hemisfear.dyndns.org:2401/k//cvs/cvsrep"/>
-		
-        <cvspass password="${cvs.password}"
-                 cvsroot="${cvsroot}"
-                 passfile="${top}/.cvspass"/>
+        <property 
+            name="cvsroot" 
+            value=":pserver:analogue@hemisfear.dyndns.org:2401/k//cvs/cvsrep"/>
+        
+        <cvspass password = "${cvs.password}"
+                 cvsroot  = "${cvsroot}"
+                 passfile = "${top}/.cvspass"/>
                  
          <loadfile property="cvspass" srcFile="${top}/.cvspass"/>                 
          <echo message="${cvspass}"/>
                  
-        <cvs cvsroot="${cvsroot}"
-             output="${doc}/statcvs/cvs.log"
-             command="log"
-             passfile="${top}/.cvspass"/>
+         <cvs cvsroot  = "${cvsroot}"
+              output   = "${doc}/statcvs/cvs.log"
+              command  = "log"
+              passfile = "${top}/.cvspass"/>
 
         <delete file="${top}/.cvspass"/>
     
@@ -731,17 +720,17 @@
              classname="net.sf.statcvs.ant.StatCvsTask"
              classpath="build/lib/statcvs.jar"/>
     
-    <target name="statcvs" 
-            depends="init, cvslog"
-            description="Generates a report with CVS statistics">
+    <target name        = "statcvs" 
+            depends     = "init, cvslog"
+            description = "Generates a report with CVS statistics">
             
         <statcvs 
-            projectName="Toolbox"
-            projectDirectory="${top}"
-            cvsLogFile="${doc}/statcvs/cvs.log"
-            outputDirectory="${doc}/statcvs"
-            cssFile="http://statcvs.sf.net/stats/statcvs.css"
-            showCredits="no"/>
+            projectName      = "Toolbox"
+            projectDirectory = "${top}"
+            cvsLogFile       = "${doc}/statcvs/cvs.log"
+            outputDirectory  = "${doc}/statcvs"
+            cssFile          = "http://statcvs.sf.net/stats/statcvs.css"
+            showCredits      = "no"/>
             
     </target>
 
@@ -749,23 +738,23 @@
     <!--=============================--> 
     <!--       JAVA2HTML             -->
     <!--=============================-->
-    <taskdef name="java2html" 
-             classname="com.java2html.Java2HTMLTask"
-             classpath="build/lib/j2h.jar"/>
+    <taskdef name      = "java2html" 
+             classname = "com.java2html.Java2HTMLTask"
+             classpath = "build/lib/j2h.jar"/>
 
-    <target name="java2html"
-            depends="init"
-            description="Generates colorized HTML version of the source code useful for browsing">
+    <target name        = "java2html"
+            depends     = "init"
+            description = "Generates colorized HTML version of the source code useful for browsing">
     
         <mkdir dir="${doc}/java2html"/>
         
-        <java2html title="Toolbox"
-                   simple="no"
-                   tabsize="4"
-                   marginsize="2"
-                   header="true"
-                   footer="false"
-                   destination="${doc}/java2html">
+        <java2html title       = "Toolbox"
+                   simple      = "no"
+                   tabsize     = "4"
+                   marginsize  = "2"
+                   header      = "true"
+                   footer      = "false"
+                   destination = "${doc}/java2html">
                    
             <fileset dir="${src}">
                 <include name="**/*.java"/>
@@ -777,9 +766,9 @@
         </java2html>
         
         <copy overwrite = "true" 
-         	  verbose   = "true"
-        	  file      = "${build.conf}/java2html-stylesheet.css" 
-        	  tofile    = "${doc}/java2html/stylesheet.css"/>
+              verbose   = "true"
+              file      = "${build.conf}/java2html-stylesheet.css" 
+              tofile    = "${doc}/java2html/stylesheet.css"/>
         
     </target>    
     
