--- a/trunk/toolbox/.classpath
+++ b/trunk/toolbox/.classpath
@@ -4,45 +4,45 @@
     <classpathentry kind="src" path="debug"/>
     <classpathentry kind="lib" path="resources"/>
     <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
-    <classpathentry kind="lib" path="lib/junit.jar" sourcepath="/toolbox/lib/src/junit-src.zip"/>
-    <classpathentry kind="lib" path="lib/log4j.jar" sourcepath="/toolbox/lib/src/log4j-src.zip"/>
+    <classpathentry kind="lib" path="lib/junit.jar" sourcepath="lib/src/junit-src.zip"/>
+    <classpathentry kind="lib" path="lib/log4j.jar" sourcepath="lib/src/log4j-src.zip"/>
     <classpathentry kind="lib" path="lib/jode.jar"/>
     <classpathentry kind="lib" path="lib/metouia.jar"/>
-    <classpathentry kind="lib" path="lib/commons-beanutils.jar" sourcepath="/toolbox/lib/src/commons-beanutils-src.zip"/>
-    <classpathentry kind="lib" path="lib/commons-logging.jar" sourcepath="/toolbox/lib/src/commons-logging-src.zip"/>
-    <classpathentry kind="lib" path="lib/commons-collections.jar" sourcepath="/toolbox/lib/src/commons-collections-src.zip"/>
-    <classpathentry kind="lib" path="lib/commons-lang.jar" sourcepath="/toolbox/lib/src/commons-lang-src.zip"/>
-    <classpathentry kind="lib" path="lib/commons-net.jar" sourcepath="/toolbox/lib/src/commons-net-src.zip"/>
-    <classpathentry kind="lib" path="lib/jakarta-regexp.jar" sourcepath="/toolbox/lib/src/jakarta-regexp-src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-beanutils.jar" sourcepath="lib/src/commons-beanutils-src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-logging.jar" sourcepath="lib/src/commons-logging-src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-collections.jar" sourcepath="lib/src/commons-collections-src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-lang.jar" sourcepath="lib/src/commons-lang-src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-net.jar" sourcepath="lib/src/commons-net-src.zip"/>
+    <classpathentry kind="lib" path="lib/jakarta-regexp.jar" sourcepath="lib/src/jakarta-regexp-src.zip"/>
     <classpathentry kind="lib" path="lib/plastic.jar"/>
     <classpathentry kind="lib" path="lib/kunststoff.jar"/>
     <classpathentry kind="lib" path="lib/xplookandfeel.jar"/>
     <classpathentry kind="lib" path="lib/batik.jar"/>
     <classpathentry kind="lib" path="lib/acrobat.jar"/>
-    <classpathentry kind="lib" path="lib/fop.jar" sourcepath="/toolbox/lib/src/fop-src.zip"/>
+    <classpathentry kind="lib" path="lib/fop.jar" sourcepath="lib/src/fop-src.zip"/>
     <classpathentry kind="lib" path="lib/avalon-framework.jar"/>
-    <classpathentry kind="lib" path="lib/jedit-syntax.jar" sourcepath="/toolbox/lib/src/jedit-syntax-src.zip"/>
+    <classpathentry kind="lib" path="lib/jedit-syntax.jar" sourcepath="lib/src/jedit-syntax-src.zip"/>
     <classpathentry kind="lib" path="lib/apple-mrj.jar"/>
     <classpathentry kind="lib" path="lib/cryptix32.jar"/>
     <classpathentry kind="lib" path="lib/cryptix32-pgp.jar"/>
-    <classpathentry kind="lib" path="lib/saxon.jar" sourcepath="/toolbox/lib/src/saxon-src.zip"/>
+    <classpathentry kind="lib" path="lib/saxon.jar" sourcepath="lib/src/saxon-src.zip"/>
     <classpathentry kind="lib" path="lib/xep.jar"/>
-    <classpathentry kind="lib" path="lib/xt.jar" sourcepath="/toolbox/lib/src/xt-src.zip"/>
+    <classpathentry kind="lib" path="lib/xt.jar" sourcepath="lib/src/xt-src.zip"/>
     <classpathentry kind="lib" path="lib/commons-cli.jar"/>
     <classpathentry kind="lib" path="build/lib/clover.jar"/>
-    <classpathentry kind="lib" path="lib/hsqldb.jar" sourcepath="/toolbox/lib/src/hsqldb-src.zip"/>
-    <classpathentry kind="lib" path="lib/commons-io.jar" sourcepath="/toolbox/lib/src/commons-io-src.zip"/>
+    <classpathentry kind="lib" path="lib/hsqldb.jar" sourcepath="lib/src/hsqldb-src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-io.jar" sourcepath="lib/src/commons-io-src.zip"/>
     <classpathentry kind="lib" path="lib/cvslib.jar"/>
-    <classpathentry kind="lib" path="lib/ant.jar" sourcepath="/toolbox/lib/src/ant-src.zip"/>
-    <classpathentry kind="lib" path="lib/hamsam.jar"/>
-    <classpathentry kind="lib" path="lib/commons-codec.jar" sourcepath="/toolbox/lib/src/commons-codec-src.zip"/>
+    <classpathentry kind="lib" path="lib/ant.jar" sourcepath="lib/src/ant-src.zip"/>
+    <classpathentry kind="lib" path="lib/hamsam.jar" sourcepath="lib/src/hamsam-src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-codec.jar" sourcepath="lib/src/commons-codec-src.zip"/>
     <classpathentry kind="lib" path="lib/statcvs.jar" sourcepath="K:/workspaces/workspace-lib/statcvs/src"/>
-    <classpathentry kind="lib" path="lib/tinylaf.jar" sourcepath="/toolbox/lib/src/tinylaf-src.zip"/>
-    <classpathentry kind="lib" path="lib/xercesImpl.jar" sourcepath="/toolbox/lib/src/xercesImpl-src.zip"/>
-    <classpathentry kind="lib" path="lib/xml-apis.jar" sourcepath="/toolbox/lib/src/xml-apis-src.zip"/>
-    <classpathentry kind="lib" path="lib/xom.jar" sourcepath="/toolbox/lib/src/xom-src.zip"/>
+    <classpathentry kind="lib" path="lib/tinylaf.jar" sourcepath="lib/src/tinylaf-src.zip"/>
+    <classpathentry kind="lib" path="lib/xercesImpl.jar" sourcepath="lib/src/xercesImpl-src.zip"/>
+    <classpathentry kind="lib" path="lib/xml-apis.jar" sourcepath="lib/src/xml-apis-src.zip"/>
+    <classpathentry kind="lib" path="lib/xom.jar" sourcepath="lib/src/xom-src.zip"/>
     <classpathentry kind="lib" path="lib/jaimlib.jar"/>
-    <classpathentry kind="lib" path="lib/bsh.jar" sourcepath="/toolbox/lib/src/bsh-src.zip"/>
+    <classpathentry kind="lib" path="lib/bsh.jar" sourcepath="lib/src/bsh-src.zip"/>
     <classpathentry kind="lib" path="lib/sametime-comm.jar"/>
     <classpathentry kind="lib" path="lib/sametime-comm-res.jar"/>
     <classpathentry kind="output" path="classes"/>
