--- a/trunk/toolbox/build.properties
+++ b/trunk/toolbox/build.properties
@@ -2,7 +2,7 @@
 # M A V E N  J A R  O V E R R I D E
 # ------------------------------------------------------------------------
 
-# Forces the following jars to be picked up from lib instead 
+# Forces the following jars to be picked up from lib instead
 # of the Maven repository. This will result in errors at the start of
 # each project build (something about the jar cannot be downloaded from
 # the repository) but they are to be ignored. The errors can be muted
@@ -60,7 +60,7 @@ maven.jar.xt=${basedir}/lib/xt.jar
 # T E S T
 # ------------------------------------------------------------------------
 
-# Forces each unit test to be run in its own process. This is turned on 
+# Forces each unit test to be run in its own process. This is turned on
 # because of some sort of Xerces conflict that surfaced when the tests
 # were all run in the same JVM.
 maven.junit.fork=yes
@@ -72,14 +72,14 @@ maven.junit.usefile=true
 maven.test.failure.ignore=true
 
 # As part of the normal build process, Maven insists on running the JUnit
-# tests when attaining the jar:install goal. Use this property to skips 
+# tests when attaining the jar:install goal. Use this property to skips
 # over junit tests when not necessary. This must be set to false when
 # building the continuous integration build or the deployment build.
 maven.test.skip=true
 
 # JUnit command line arguments when fork is set to true
 #maven.junit.jvmargs=-Xbootclasspath/a:${basedir}/classes
-#-Dlog4j.debug=true -Dlog4j.configuration=file:/c:/workspaces/workspace-head/build/conf/log4j.xml 
+#-Dlog4j.debug=true -Dlog4j.configuration=file:/c:/workspaces/workspace-head/build/conf/log4j.xml
 
 # ------------------------------------------------------------------------
 #  C O M P I L E
@@ -95,7 +95,7 @@ maven.compile.verbose=off
 #build.compiler=jikes
 
 # Forks compile tasks into a separate process
-maven.compile.fork=true 
+maven.compile.fork=true
 
 # Ignores compilation errors and continues the build. Must set to true
 # for the continuous integration and deployment builds.
@@ -106,19 +106,19 @@ maven.compile.failonerror=true
 # ------------------------------------------------------------------------
 
 # Exclude statment that results in the build of all PWSW modules. This is
-# the normal setting for the continuous integration build and the 
+# the normal setting for the continuous integration build and the
 # deployment build. Make sure to *COMMENT OUT* maven.multiproject.includes
 maven.multiproject.excludes=project.xml,**/build/**
 
-# Use this to single out projects individual projects to be built. Handy 
-# for debugging and experimenting with Maven without the baggage of the 
+# Use this to single out projects individual projects to be built. Handy
+# for debugging and experimenting with Maven without the baggage of the
 # entire build. Make sure to *COMMENT OUT* maven.multiproject.excludes
 #maven.multiproject.includes=**/uiframework/project.xml,**/email/project.xml
 
 # Ignores failures and continues the build regardless. This should be
 # set to true for the continuous integration build and false for the
 # deployment build.
-maven.multiproject.ignoreFailures=true 
+maven.multiproject.ignoreFailures=true
 
 # ------------------------------------------------------------------------
 # J A V A D O C
@@ -131,7 +131,7 @@ maven.javadoc.private=true
 # T A S K L I S T
 # ------------------------------------------------------------------------
 
-# Defines the text string in java source code that denotes TODO tasks 
+# Defines the text string in java source code that denotes TODO tasks
 # for the Maven TaskList report
 #maven.tasklist.taskTag=TODO:
 
@@ -145,20 +145,20 @@ maven.jnlp.signjar.alias=jdc
 maven.jnlp.signjar.validity=720
 maven.jnlp.signjar.dname.cn=Joe
 maven.jnlp.signjar.dname.ou=Bob
-maven.jnlp.signjar.dname.o=Bubbas 
+maven.jnlp.signjar.dname.o=Bubbas
 maven.jnlp.signjar.dname.l=Dallas
 maven.jnlp.signjar.dname.s=TX
 maven.jnlp.signjar.dname.c=US
 
-#maven.jnlp.signjar.store  	 Yes  	 The keystore location. It's necessary if you want sign your jars.  	
-#maven.jnlp.signjar.storepass 	Yes 	The password for keystore integrity. Must be at least 6 characters long. 	
+#maven.jnlp.signjar.store  	 Yes  	 The keystore location. It's necessary if you want sign your jars.
+#maven.jnlp.signjar.storepass 	Yes 	The password for keystore integrity. Must be at least 6 characters long.
 #maven.jnlp.signjar.alias 	Yes 	The alias for the keystore. 	${pom.artifactId}
 #maven.jnlp.signjar.validity 	Yes 	Indicates how many days certificate is valid. 	720
-#maven.jnlp.signjar.dname.cn 	Yes 	The common name of distinguished name. 	
-#maven.jnlp.signjar.dname.ou 	Yes 	The organization unit of distinguished name. 	
+#maven.jnlp.signjar.dname.cn 	Yes 	The common name of distinguished name.
+#maven.jnlp.signjar.dname.ou 	Yes 	The organization unit of distinguished name.
 #maven.jnlp.signjar.dname.o 	Yes 	The organization of distinguished name. 	${pom.organization.name}
-#maven.jnlp.signjar.dname.l 	Yes 	The locality of distinguished name. 	
-#maven.jnlp.signjar.dname.s 	Yes 	The street of distinguished name. 	
+#maven.jnlp.signjar.dname.l 	Yes 	The locality of distinguished name.
+#maven.jnlp.signjar.dname.s 	Yes 	The street of distinguished name.
 #maven.jnlp.signjar.dname.c 	Yes 	The country of distinguished name.
 
 maven.jnlp.dir=${maven.build.dir}/jnlp
@@ -179,8 +179,8 @@ maven.jnlp.j2se.version=1.4
 maven.jnlp.j2se.heapsize.initial=32m
 maven.jnlp.j2se.heapsize.max=128m
 maven.jnlp.isapplet=false
-#maven.jnlp.applet.name 	Yes 	The applet name. 	
+#maven.jnlp.applet.name 	Yes 	The applet name.
 maven.jnlp.isinstaller=false
 maven.jnlp.iscomponent=false
-maven.jnlp.mainclass=toolbox.util.ui.plugin.PluginWorkspace
+maven.jnlp.mainclass=toolbox.workspace.PluginWorkspace
 #maven.jnlp.mainclass.arguments 	Yes 	The argument list for the main class. All arguments are separated by a space.
