--- a/trunk/toolbox/build.properties
+++ b/trunk/toolbox/build.properties
@@ -40,6 +40,7 @@ maven.jar.junit=${basedir}/lib/junit.jar
 maven.jar.kunststoff=${basedir}/lib/kunststoff.jar
 maven.jar.log4j=${basedir}/lib/log4j.jar
 maven.jar.metouia=${basedir}/lib/metouia.jar
+maven.jar.multivalent=${basedir}/lib/multivalent.jar
 maven.jar.plastic=${basedir}/lib/plastic.jar
 maven.jar.saxon=${basedir}/lib/saxon.jar
 maven.jar.statcvs=${basedir}/lib/statcvs.jar
@@ -163,12 +164,12 @@ maven.jnlp.signjar.dname.c=US
 
 maven.jnlp.dir=${maven.build.dir}/jnlp
 maven.jnlp.spec=1.0+
-maven.jnlp.http.codebase=http://192.168.1.101:8080/
+maven.jnlp.http.codebase=http://12.239.81.65:8080/
 maven.jnlp.title=${pom.name}
-maven.jnlp.vendor=None
-maven.jnlp.homepage=http://192.168.1.101:8080/index.html
-maven.jnlp.icon=http://192.168.1.101:8080/toolbox.jpg
-maven.jnlp.icon.splash=http://192.168.1.101:8080/toolbox.jpg
+maven.jnlp.vendor=:-)
+maven.jnlp.homepage=http://12.239.81.65:8080/index.html
+maven.jnlp.icon=http://12.239.81.65:8080/toolbox.jpg
+maven.jnlp.icon.splash=http://12.239.81.65:8080/toolbox.jpg
 maven.jnlp.description=${pom.description}
 maven.jnlp.description.one-line=Java Developers Toolbox
 maven.jnlp.description.short=${pom.shortDescription}
@@ -177,7 +178,7 @@ maven.jnlp.offline.allowed=true
 maven.jnlp.permission=all
 maven.jnlp.j2se.version=1.4
 maven.jnlp.j2se.heapsize.initial=32m
-maven.jnlp.j2se.heapsize.max=128m
+maven.jnlp.j2se.heapsize.max=256m
 maven.jnlp.isapplet=false
 #maven.jnlp.applet.name 	Yes 	The applet name.
 maven.jnlp.isinstaller=false
