--- a/trunk/toolbox/build.properties
+++ b/trunk/toolbox/build.properties
@@ -10,8 +10,6 @@
 
 maven.jar.override=on
 
-maven.jar.debug=${basedir}/lib/debug.zip
-
 maven.jar.acrobat=${basedir}/lib/acrobat.jar
 maven.jar.ant=${basedir}/lib/ant.jar
 maven.jar.apple-mrj=${basedir}/lib/apple-mrj.jar
@@ -30,6 +28,7 @@ maven.jar.cryptix32=${basedir}/lib/cryptix32.jar
 maven.jar.cryptix32-pgp=${basedir}/lib/cryptix32-pgp.jar
 maven.jar.cvslib=${basedir}/lib/cvslib.jar
 maven.jar.db2java=${basedir}/lib/db2java.jar
+maven.jar.debug=${basedir}/lib/debug.jar
 maven.jar.fop=${basedir}/lib/fop.jar
 maven.jar.hamsam=${basedir}/lib/hamsam.jar
 maven.jar.hsqldb=${basedir}/lib/hsqldb.jar
